[gd_scene load_steps=13 format=3 uid="uid://cuqlbgyno5mce"]

[ext_resource type="FontFile" uid="uid://ci1j3cg0vgsfj" path="res://fonts/BalsamiqSans-Bold.ttf" id="1_grvxc"]
[ext_resource type="Script" path="res://UI/confirm_panel.gd" id="1_ooy02"]
[ext_resource type="StyleBox" uid="uid://bcf7os0dvohpq" path="res://UI/Styles/gradient_normal.tres" id="3_ue1ny"]
[ext_resource type="StyleBox" uid="uid://ds7mo5r36vol2" path="res://UI/Styles/gradient_hover.tres" id="4_52bop"]
[ext_resource type="StyleBox" uid="uid://ppjnw7k3p8sk" path="res://UI/Styles/gradient_pressed.tres" id="5_fpdr5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65drq"]
bg_color = Color(0.820747, 0.65293, 0.38712, 1)

[sub_resource type="LabelSettings" id="LabelSettings_35c34"]
font = ExtResource("1_grvxc")
font_size = 60
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_imk38"]
font = ExtResource("1_grvxc")
font_size = 40
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ld1fk"]
font = ExtResource("1_grvxc")
font_size = 40
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lyvro"]
bg_color = Color(0.701961, 0.447059, 1, 0.639216)
border_width_bottom = 70
border_color = Color(0.87451, 0.803922, 0.470588, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ltvxm"]
bg_color = Color(0.737255, 0.537255, 1, 0.639216)
border_width_bottom = 70
border_color = Color(0.917647, 0.862745, 0.584314, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_02n6h"]
bg_color = Color(0.815686, 0.694118, 1, 0.639216)
border_width_bottom = 70
border_color = Color(0.956863, 0.92549, 0.764706, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="ConfirmPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ooy02")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -408.0
offset_top = -200.0
offset_right = 408.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_65drq")

[node name="Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -186.0
offset_top = 8.0
offset_right = 186.0
offset_bottom = 80.0
grow_horizontal = 2
text = "Are you sure?"
label_settings = SubResource("LabelSettings_35c34")

[node name="BodyTextLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -356.0
offset_top = -24.0
offset_right = 356.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
text = "Test Message"
label_settings = SubResource("LabelSettings_imk38")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ConfirmButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -116.0
offset_right = 240.0
offset_bottom = -32.0
grow_vertical = 0
focus_mode = 0
theme_override_styles/normal = ExtResource("3_ue1ny")
theme_override_styles/hover = ExtResource("4_52bop")
theme_override_styles/pressed = ExtResource("5_fpdr5")

[node name="ConfirmButtonLabel" type="Label" parent="Panel/ConfirmButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -24.0
offset_right = 36.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
text = "Null"
label_settings = SubResource("LabelSettings_ld1fk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DenyButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -116.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_lyvro")
theme_override_styles/hover = SubResource("StyleBoxFlat_ltvxm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_02n6h")

[node name="DenyButtonLabel" type="Label" parent="Panel/DenyButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -24.0
offset_right = 36.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
text = "Null"
label_settings = SubResource("LabelSettings_ld1fk")
horizontal_alignment = 1
vertical_alignment = 1
